project-TODO/cluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api
spec:
  type: NodePort
  selector:
    app: todo-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30001  # Specify the NodePort value (must be between 30000-32767)


---

apiVersion: v1
kind: Service
metadata:
  name: todo-ui
spec:
  selector:
    app: todo-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
